--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
